--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,12 @@ name = "gpd_synth"
 # Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
 # to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
 # crate-type = ["cdylib", "rlib"]
-crate-type = ["cdylib"]
+# crate-type = ["cdylib"]
 
-[dependencies.pyo3]
-version = "0.16.4"
-features = ["extension-module"]
+[dependencies]
+polars = "0.20.0"
+shapefile = "0.3.0"
+
+# [dependencies.pyo3]
+# version = "0.16.4"
+# features = ["extension-module"]
