--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ ipykernel=6.11.0=py310ha188af9_1
 ipython=8.2.0=py310h2ec42d9_0
 ipython-genutils=0.2.0=pypi_0
 ipython_genutils=0.2.0=py_1
+ipywidgets=7.7.0=pyhd8ed1ab_0
 jbig=2.1=h0d85af4_2003
 jedi=0.18.1=py310h2ec42d9_0
 jinja2=3.1.1=pypi_0
@@ -91,6 +92,7 @@ jupyterlab-pygments=0.1.2=pypi_0
 jupyterlab-server=2.12.0=pypi_0
 jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
 jupyterlab_server=2.12.0=pyhd8ed1ab_0
+jupyterlab_widgets=1.1.0=pyhd8ed1ab_0
 kealib=1.4.14=ha22a8b1_3
 kiwisolver=1.4.2=py310h6be76da_0
 krb5=1.19.3=hb49756b_0
@@ -157,7 +159,7 @@ nspr=4.32=hcd9eead_1
 nss=3.77=hfce436b_0
 numpy=1.22.3=py310hb608527_0
 openjpeg=2.4.0=h6e7aa92_1
-openssl=1.1.1n=h6c3fc93_0
+openssl=1.1.1o=hfe4f2af_0
 packaging=21.3=pypi_0
 pandas=1.4.1=py310hdd25497_0
 pandoc=2.17.1.1=h694c41f_0
@@ -228,6 +230,7 @@ wcwidth=0.2.5=pypi_0
 webencodings=0.5.1=pypi_0
 websocket-client=1.3.2=pypi_0
 wheel=0.37.1=pypi_0
+widgetsnbextension=3.6.0=py310h2ec42d9_0
 xerces-c=3.2.3=h6564042_4
 xorg-libxau=1.0.9=h35c211d_0
 xorg-libxdmcp=1.1.3=h35c211d_0
